--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,7 @@ jobs:
       - helix-post-deploy/monitoring:
           statuspage_name: Helix Status Service
           action_name: status
-          newrelic_name: @adobe/helix-status
+          newrelic_name: "@adobe/helix-status"
           statuspage_group: Delivery
           newrelic_group_policy: Delivery Repeated Failure
           aws: true
