--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,7 +89,7 @@ jobs:
           name: revert changes to package-lock.json
           command: git checkout -- package-lock.json
       - helix-post-deploy/config-wsk
-      - helix-gcloud-setup/file
+      - helix-gcloud-setup/load-config
       - run:
           name: Branch Deployment
           command: npm run deploy-ci
