--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,7 @@ jobs:
           action_name: status
           newrelic_name: "@adobe/helix-status"
           newrelic_group_policy: Delivery Repeated Failure
-          aws: true
+          targets: universal, aws, adobeio
 
   branch-deploy:
     executor: node12
