--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "deploy-ci": "hedy -v --deploy --test=/_status_check/healthcheck.json --pkgVersion=ci$CIRCLE_BUILD_NUM -l ci"
   },
   "wsk": {
+    "target": "aws",
     "namespace": "helix",
     "name": "helix-services/status@${version}",
-    "memory": 512
+    "memory": 512,
+    "fastlyServiceId!important": ""
   },
   "repository": {
     "type": "git",
