feat: new releasing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,9 +65,9 @@ jobs:
           command: npm run test-postdeploy
       - store_test_results:
           path: junit
-      - run:
-          name: Link Sequences
-          command: npm run deploy-sequences
+#      - run:
+#          name: Link Sequences
+#          command: npm run deploy-sequences
       # see https://circleci.com/orbs/registry/orb/adobe/helix-post-deploy
       # for more available parameters
       - helix-post-deploy/monitoring:
