--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "commit": "git-cz",
     "build": "hedy -v",
     "deploy": "hedy -v --deploy --test=/_status_check/healthcheck.json",
-    "deploy-sequences": "hedy --no-build -no-hints -l major",
+    "deploy-routes": "hedy --no-build -no-hints -l major",
     "deploy-ci": "hedy -v --deploy --test=/_status_check/healthcheck.json --pkgVersion=ci$CIRCLE_BUILD_NUM -l ci"
   },
   "wsk": {
