--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "deploy-ci": "hedy -v --deploy --test=/_status_check/healthcheck.json --pkgVersion=ci$CIRCLE_BUILD_NUM -l ci"
   },
   "wsk": {
-    "target": "aws,openwhisk",
+    "target": "aws",
     "namespace": "helix",
     "name": "helix-services/status@${version}",
     "memory": 512
