--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "homepage": "https://github.com/adobe/helix-status-service#readme",
   "dependencies": {
-    "@adobe/helix-fetch": "3.1.2",
+    "@adobe/fetch": "3.1.4",
     "@adobe/helix-shared-wrap": "1.0.5",
     "@adobe/helix-status": "9.2.13",
     "@adobe/helix-universal-logger": "2.0.12"
