--- a/package.json
+++ b/package.json
@@ -34,9 +34,7 @@
   "homepage": "https://github.com/adobe/helix-status-service#readme",
   "dependencies": {
     "@adobe/fetch": "3.3.0",
-    "@adobe/helix-shared-wrap": "1.0.5",
-    "@adobe/helix-status": "9.2.18",
-    "@adobe/helix-universal-logger": "2.0.16"
+    "@adobe/helix-status": "9.2.18"
   },
   "devDependencies": {
     "@adobe/eslint-config-helix": "1.3.2",
