chore: Use node 18 for circleci (#315)

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "target": "aws",
     "namespace": "helix",
     "name": "helix-services/status@${version}",
-    "memory": 512
+    "memory": 512,
+    "nodeVersion": 18
   },
   "repository": {
     "type": "git",
