--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "junit-report-builder": "3.0.1",
     "lint-staged": "13.1.0",
     "mocha": "10.2.0",
+    "mocha-multi-reporters": "1.5.1",
     "semantic-release": "19.0.5"
   },
   "lint-staged": {
