--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "test": "c8 mocha -i -g 'Post-Deploy'",
-    "test-postdeploy": "c8 -g 'Post-Deploy'",
+    "test-postdeploy": "c8 mocha -g 'Post-Deploy'",
     "lint": "eslint .",
     "semantic-release": "semantic-release",
     "build": "hedy -v",
